[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.1.0",
    "pip>=25.2",
    "reportlab>=4.4.4",
    "streamlit-image-select>=0.6.0",
    "streamlit-image-select-mod>=0.1.2",
    "tcl>=0.2",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "uv>=0.8.22",
]
